syntax = "proto3";

package extapi;
option go_package = "github.com/mxc-foundation/lpwan-app-server/api/extapi;extapi";

import "google/api/annotations.proto";

// ProvisionedDeviceService is the service managing the devices with Provision ID.
service DeviceProvisioningService {
    // Create - creates the given provisioned device.
    rpc Create (CreateRequest) returns (CreateResponse) {
        option (google.api.http) = {
            post: "/api/device-provision"
            body: "*"
        };
    }
}

message CreateRequest {
    // provision id, scan result from the tag provided by manufacturer
    string provision_id = 1;
    int64 organization_id = 2;
    // ID of the application to which the device must be added.
    // It is possible to move a device to a different application on update,
    // given that both the old and the new application share the same
    // service-profile.
    int64 application_id = 3;
    // DeviceProfileID attached to the device.
    string device_profile_id = 4;
}

message CreateResponse {
}
